--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,80 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cret"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="16dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/bgjpg"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textViewWelcomeBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="100dp"
-        android:layout_marginLeft="40dp"
-        android:text="Welcome Back"
-        android:textSize="50sp"
-        android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/editTextEmail"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="26dp"
+            android:layout_marginTop="55dp"
+            android:fontFamily="sans-serif-black"
+            android:text="Welcome\nBack User"
+            android:textColor="@color/black"
+            android:textSize="50sp" />
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="64dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/emailshape"
-        android:hint="Email"
-        android:padding="10dp"
-        android:textColor="@color/cardview_light_background"
-        android:textColorHint="@android:color/darker_gray"
-        android:textStyle="bold" />
+
+        android:layout_marginTop="370dp"
+        android:orientation="vertical"
+        android:padding="10dp">
 
 
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="64dp"
-        android:background="@drawable/emailshape"
-        android:hint="Password"
-        android:layout_marginBottom="60dp"
-        android:inputType="textPassword"
-        android:padding="10dp"
-        android:textColor="@android:color/black"
-        android:textColorHint="@android:color/darker_gray"
-        android:textStyle="bold" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="#e7e7e7"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="15sp"
+            app:cardElevation="15dp">
 
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_215sdp"
-        android:backgroundTint="@color/black"
-        android:text="Login"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="40dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/textViewForgotPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="30dp"
-        android:text="Forgot Password?" />
 
-    <TextView
-        android:id="@+id/textViewSignUp"
-        android:layout_width="281dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:text="Don't have an account? Sign up"
-        android:textColor="@android:color/holo_blue_dark" />
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="10dp"
+                    android:src="@drawable/baseline_email_24" />
 
-</LinearLayout>
+
+                <EditText
+                    android:layout_width="300dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="10dp"
+                    android:hint="Enter Your Email"
+                    android:inputType="textEmailAddress"
+                    android:textColor="@color/black"
+                    android:textColorHint="#9d9d9d" />
+
+
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="#e7e7e7"
+            app:cardBackgroundColor="@color/white"
+            app:cardCornerRadius="15sp"
+            app:cardElevation="15dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/key" />
+
+
+                <EditText
+                    android:layout_width="300dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="10dp"
+                    android:hint="Enter Passord"
+                    android:inputType="textPassword"
+                    android:textColor="@color/black"
+                    android:textColorHint="#9d9d9d" />
+
+
+            </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-black"
+            android:text="Forgot Password ?"
+            android:textColor="@color/black" />
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/btnLogIn"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="15dp"
+            android:layout_marginTop="26dp"
+            app:cardBackgroundColor="#FFA500"
+            app:cardCornerRadius="24dp"
+            app:cardElevation="9dp">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="sans-serif-black"
+                android:text="Log In"
+                android:textColor="@color/white"
+                android:textSize="25dp" />
+
+
+        </androidx.cardview.widget.CardView>
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="45dp"
+            android:text="Don't have an Account ? Sign Up !!"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+    </RelativeLayout>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
