--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -57,6 +57,7 @@
 
 
                 <EditText
+                    android:id="@+id/LogInEmial"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
@@ -100,6 +101,7 @@
 
 
                 <EditText
+                    android:id="@+id/LogInPassword"
                     android:layout_width="300dp"
                     android:layout_height="50dp"
                     android:layout_marginStart="10dp"
@@ -151,6 +153,7 @@
 
 
         <TextView
+            android:id="@+id/tvNewUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -165,4 +168,4 @@
     </RelativeLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
