--- a/app/src/main/res/layout/fragment_profilr.xml
+++ b/app/src/main/res/layout/fragment_profilr.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,9 +7,11 @@
     android:background="@color/white">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Profile Fragment" />
+    <Button
+        android:id="@+id/btnLogOut"
+        android:layout_centerInParent="true"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:text="Log Out"/>
 
-</FrameLayout>
+</RelativeLayout>
