--- a/app/src/main/res/layout/activity_navbar.xml
+++ b/app/src/main/res/layout/activity_navbar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,6 +13,7 @@
         app:layout_constraintBaseline_toTopOf="@id/NavigationBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_above="@id/NavigationBar"
         app:layout_constraintTop_toTopOf="parent"/>
 
 
@@ -23,6 +24,7 @@
         android:background="#C18518"
         app:itemActiveIndicatorStyle="@color/material_dynamic_neutral_variant90"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_alignParentBottom="true"
         app:menu="@menu/nav_menu"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
