bhuwnesh create fragment upload

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#E91E63</color>
     <color name="blue">#2196F3</color>
+    <color name="slity">#88809BB1</color>
+    <color name="yellow">#FFC107</color>
 </resources>
