--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -56,6 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="18 Circle Drive pikesile"
+                android:textColorHint="#9d9d9d"
                 android:drawableLeft="@drawable/loc"
                 android:layout_marginLeft="20dp"
                 android:textColor="@color/black"
@@ -88,6 +89,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Subject"
+                        android:textColorHint="#9d9d9d"
                         android:textColor="@color/black"
                         android:drawableLeft="@drawable/create12"
                         android:layout_marginLeft="5dp"
