--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,6 +12,333 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:background="#e7e7e7">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:paddingBottom="20dp"
+                android:orientation="vertical">
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@+id/ProfilePic"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:text="Accepted requests"
+                    android:textStyle="bold"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="8dp"/>
+
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="15dp">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="300dp"
+                            android:layout_height="200dp"
+                            app:cardBackgroundColor="@color/white"
+                            android:layout_marginStart="20dp"
+                            app:cardCornerRadius="20dp">
+
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:padding="10dp">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:id="@+id/ProfilePic23"
+                                    android:layout_width="35dp"
+                                    android:layout_height="35dp"
+                                    android:src="@drawable/profileme"/>
+
+                                <TextView
+                                    android:id="@+id/UserName4"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_toEndOf="@+id/ProfilePic23"
+                                    android:textColor="@color/black"
+                                    android:textSize="17sp"
+                                    android:text="Demo Yadav"
+                                    android:textStyle="bold"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginTop="4dp"/>
+
+                                <TextView
+                                    android:id="@+id/UserName2.01"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@+id/ProfilePic23"
+                                    android:textColor="@color/black"
+                                    android:textSize="12sp"
+                                    android:text="I want to raise an issue fromm Haldwani city of Uttarakhand ....."
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginTop="4dp"/>
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical"
+                                    android:layout_below="@+id/UserName2.01">
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal">
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:textStyle="bold"
+                                            android:layout_marginTop="10dp"
+                                            android:text="request ID : "
+                                            android:textColor="@color/black"/>
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+
+                                            android:layout_marginTop="10dp"
+                                            android:text="RQX8742938"
+                                            android:textColor="@color/black"/>
+
+
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal">
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:textStyle="bold"
+                                            android:layout_marginTop="10dp"
+                                            android:text="Place : "
+                                            android:textColor="@color/black"/>
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+
+                                            android:layout_marginTop="10dp"
+                                            android:text="Nainital , Haldwani"
+                                            android:textColor="@color/black"/>
+
+
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal">
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:textStyle="bold"
+                                            android:layout_marginTop="10dp"
+                                            android:text="road Name : "
+                                            android:textColor="@color/black"/>
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+
+                                            android:layout_marginTop="10dp"
+                                            android:text="kaladhungi Road"
+                                            android:textColor="@color/black"/>
+
+
+                                    </LinearLayout>
+
+
+                                </LinearLayout>
+
+
+
+                            </RelativeLayout>
+
+
+
+
+
+                        </androidx.cardview.widget.CardView>
+
+
+
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="300dp"
+                            android:layout_height="200dp"
+                            app:cardBackgroundColor="@color/white"
+                            android:layout_marginStart="20dp"
+                            app:cardCornerRadius="20dp">
+
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:padding="10dp">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:id="@+id/ProfilePic1"
+                                    android:layout_width="35dp"
+                                    android:layout_height="35dp"
+                                    android:src="@drawable/profileme"/>
+
+                                <TextView
+                                    android:id="@+id/UserName1"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_toEndOf="@+id/ProfilePic1"
+                                    android:textColor="@color/black"
+                                    android:textSize="17sp"
+                                    android:text="Demo Yadav"
+                                    android:textStyle="bold"
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginTop="4dp"/>
+
+                                <TextView
+                                    android:id="@+id/UserName2.0"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@+id/ProfilePic1"
+                                    android:textColor="@color/black"
+                                    android:textSize="12sp"
+                                    android:text="I want to raise an issue fromm Haldwani city of Uttarakhand ....."
+                                    android:layout_marginStart="10dp"
+                                    android:layout_marginTop="4dp"/>
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical"
+                                    android:layout_below="@+id/UserName2.0">
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal">
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:textStyle="bold"
+                                            android:layout_marginTop="10dp"
+                                            android:text="request ID : "
+                                            android:textColor="@color/black"/>
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+
+                                            android:layout_marginTop="10dp"
+                                            android:text="RQX8742938"
+                                            android:textColor="@color/black"/>
+
+
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal">
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:textStyle="bold"
+                                            android:layout_marginTop="10dp"
+                                            android:text="Place : "
+                                            android:textColor="@color/black"/>
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+
+                                            android:layout_marginTop="10dp"
+                                            android:text="Nainital , Haldwani"
+                                            android:textColor="@color/black"/>
+
+
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal">
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:textStyle="bold"
+                                            android:layout_marginTop="10dp"
+                                            android:text="road Name : "
+                                            android:textColor="@color/black"/>
+
+                                        <TextView
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+
+                                            android:layout_marginTop="10dp"
+                                            android:text="kaladhungi Road"
+                                            android:textColor="@color/black"/>
+
+
+                                    </LinearLayout>
+
+
+                                </LinearLayout>
+
+
+
+                            </RelativeLayout>
+
+
+
+
+
+                        </androidx.cardview.widget.CardView>
+
+
+                    </LinearLayout>
+
+
+
+                </HorizontalScrollView>
+
+
+
+            </LinearLayout>
+
+
+
+
+
+        </RelativeLayout>
+
+
+
+
+
 
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
@@ -257,7 +584,7 @@
 
             <TextView
                 android:id="@+id/comment2"
-                android:layout_toRightOf="@+id/by"
+                android:layout_toRightOf="@+id/by2"
                 android:layout_width="wrap_content"
                 android:layout_marginStart="1dp"
                 android:layout_height="30dp"
@@ -306,4 +633,4 @@
 
 
 
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
