--- a/app/src/main/res/layout/fragment_acc_req.xml
+++ b/app/src/main/res/layout/fragment_acc_req.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".HomeFragment"
-    android:background="#e7e7e7"
-    android:orientation="vertical">
+    tools:context=".AccReq"
+    android:background="#e7e7e7">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,13 +14,11 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:background="#e7e7e7">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:paddingBottom="10dp"
                 android:orientation="vertical">
 
@@ -33,7 +29,7 @@
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:layout_marginBottom="20dp"
-                    android:text="My Map Requests"
+                    android:text="Feebacks Sections"
                     android:textStyle="bold"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="8dp"/>
@@ -84,6 +80,4 @@
 
     </LinearLayout>
 
-
-
-</androidx.core.widget.NestedScrollView>
+</FrameLayout>
