--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="blue">#2196F3</color>
     <color name="slity">#88809BB1</color>
     <color name="yellow">#FFC107</color>
+    <color name="green">#2A742A</color>
+
+    <color name="red">#FF0000</color>
+
 </resources>
