--- a/app/src/main/res/layout/activity_auth_log_in.xml
+++ b/app/src/main/res/layout/activity_auth_log_in.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/authbg"
-    android:orientation="vertical"
-    >
-
-
+    tools:context=".AuthLogIn"
+    android:background="@drawable/authbg">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -47,85 +44,7 @@
 
 
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="#e7e7e7"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="15sp"
-                app:cardElevation="15dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="10dp"
-                        android:src="@drawable/contact" />
-
-
-                    <EditText
-                        android:id="@+id/AuthName"
-                        android:layout_width="300dp"
-                        android:layout_height="50dp"
-                        android:layout_marginStart="10dp"
-                        android:hint="Enter Your Name"
-                        android:inputType="text"
-                        android:textColor="@color/black"
-                        android:textColorHint="#9d9d9d" />
-
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="#e7e7e7"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="15sp"
-                app:cardElevation="15dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="center_vertical"
-                        android:layout_margin="10dp"
-                        android:src="@drawable/number" />
-
-
-                    <EditText
-                        android:id="@+id/EmployeeId"
-                        android:layout_width="300dp"
-                        android:layout_height="50dp"
-                        android:layout_marginStart="10dp"
-                        android:hint="Department ID"
-                        android:inputType="number"
-                        android:textColor="@color/black"
-                        android:textColorHint="#9d9d9d" />
-
-
-                </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
 
 
 
@@ -157,7 +76,7 @@
                         android:layout_width="300dp"
                         android:layout_height="50dp"
                         android:layout_marginStart="10dp"
-                        android:hint="Enter Office Email"
+                        android:hint="Enter Your Name"
                         android:inputType="textEmailAddress"
                         android:textColor="@color/black"
                         android:textColorHint="#9d9d9d" />
@@ -197,7 +116,7 @@
                         android:layout_width="300dp"
                         android:layout_height="50dp"
                         android:layout_marginStart="10dp"
-                        android:hint="Enter Password"
+                        android:hint="Enter Your Name"
                         android:inputType="textPassword"
                         android:textColor="@color/black"
                         android:textColorHint="#9d9d9d" />
@@ -209,11 +128,12 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/btnLogIn"
+                android:id="@+id/btnSignIn"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="40dp"
+
                 app:cardBackgroundColor="#171111"
                 app:cardCornerRadius="24dp"
                 app:cardElevation="9dp">
@@ -225,12 +145,13 @@
                     android:layout_gravity="center"
                     android:id="@+id/loginButton"
                     android:fontFamily="sans-serif-black"
-                    android:text="Sign Up"
+                    android:text="Sign In"
                     android:textColor="@color/white"
                     android:textSize="25dp" />
 
 
             </androidx.cardview.widget.CardView>
+
 
             <TextView
                 android:id="@+id/NewAuth"
@@ -245,4 +166,4 @@
 
     </RelativeLayout>
 
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
