--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -147,7 +147,7 @@
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/btnLogOut"
+                android:id="@+id/btnReport"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 app:cardBackgroundColor="#FFA500"
