--- a/app/src/main/res/layout/activity_authority.xml
+++ b/app/src/main/res/layout/activity_authority.xml
@@ -237,7 +237,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Don't have an Account ? Sign Up !!"
+                android:text="Already have an Account ? Log In !!"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
