--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -33,6 +33,8 @@
             android:textAlignment="center"
             android:text="Introducing our GravelWatch app! Empower citizens to report road gravel issues instantly. Enhance road safety and infrastructure by connecting people with the government for efficient gravel detection and resolution."/>
 
+
+
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/lottieAnimationView"
             android:layout_width="400dp"
@@ -50,7 +52,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:textColor="@color/black"
-            android:text="Choose Your LogIn Meathod"/>
+            android:text="Choose Your Login Method"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -113,10 +115,22 @@
 
 
             </androidx.cardview.widget.CardView>
+
+
+
+
+
+
         </LinearLayout>
 
 
 
+
+
+
+
+
     </LinearLayout>
+
 
 </RelativeLayout>
