--- a/app/src/main/res/layout/custom_window.xml
+++ b/app/src/main/res/layout/custom_window.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="asufdvvbsdjfdsc sdkjc"
+            android:text="Bhuwnesh"
             android:textColor="@android:color/black"
             android:paddingTop="5dp" />
 
