choti moti details

--- a/app/src/main/res/layout/fragment_auth_profile.xml
+++ b/app/src/main/res/layout/fragment_auth_profile.xml
@@ -40,7 +40,7 @@
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:text="BHuwnesh "
+            android:text="Authority"
             android:layout_toRightOf="@id/IvProfile"
             android:layout_below="@+id/MenuText"
             android:layout_marginTop="25dp"
