--- a/app/src/main/res/layout/fragment_profilr.xml
+++ b/app/src/main/res/layout/fragment_profilr.xml
@@ -34,8 +34,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginTop="20dp"
-            android:layout_below="@+id/MenuText"
-            android:src="@drawable/profileme"/>
+            android:layout_below="@+id/MenuText" />
 
         <TextView
             android:id="@+id/TvUserName"
@@ -44,7 +43,7 @@
             android:textSize="18sp"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:text="Bhuwnesh Ashish "
+            android:text=""
             android:layout_toRightOf="@id/IvProfile"
             android:layout_below="@+id/MenuText"
             android:layout_marginTop="25dp"
